app/styles/app.less
body, html {
  height: 100%;
}

@button-gradient: linear-gradient(180deg,rgb(229,229,229),rgb(130,130,130));
@dark-border: rgb(9,8,8);

/*
 list background/divider: 9,10,10 - 090A0A
 list background alt: 12,12,13 - 0C0C0D
 list color: 129,159,171 - 819FAB
 list hover color: 32,34,44 - 20222C
 list hover text color: 200,200,200 - C8C8C8
 border: 38,42,42 - 262A2A
 table header: 57,59,60 - 393B3C
 table header text: 200,200,200 - C8C8C8
 table header border: 81,84,85 - 515455
 table header border vertical: 24,26,26 - 181A1A
*/

body {
    background-color: #232629;
    overflow: hidden;
}

.btn.btn-default.btn-xs {
  .button-shadow();
  border-radius: 3px;
}

.main-container {
  height: 100%;
    margin: 5px;
    margin-bottom: 10px;
    background-color: #232629;
}

.header-components {
  height: 13%;
    margin-bottom: 10px;
    height: 120px;
}

.media-tables {
  height: 100%;
}

/*
 Tab container
 */
.tab-container {
  height: 86%;
}

.tab-container .tabs {
  background-color: black;
  height: 30px;
  padding-left: 5px;
  padding-top: 8px;
  margin-right: -5px;
}

.tab-container .tabs .tab {
  color: rgb(196,196,196);
  font-weight: bold;
  letter-spacing: 1px;
  text-shadow: 0 1px 0 rgb(15,15,15);
  background: linear-gradient(rgb(65,69,71),rgb(36,40,43),rgb(43,45,48));
  padding: 5px 10px;
  font-size: 11px;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  cursor: pointer;
}

.tab-container .tabs .tab.selected {
  color: rgb(220,220,220);
  background: linear-gradient(rgb(91,98,103),rgb(38,42,42),rgb(38,42,42));
}

/*
 Visualizations
 */

.visualizations {
  height: 100%;
  border: 5px solid #262A2A;
  background-color: #090A0A;
  color: #819FAB;
}

/*
 Media selector
*/
.media-selector {
  height: 100%;
  margin-right: 15px;
  border: 5px solid #262A2A;
  background-color: #090A0A;
  color: #819FAB;
  font-size: 12px;
  padding-top: 5px;
  padding-left: 0;
  padding-right: 0;
}

.media-selector .selector-item {
  padding-left: 5px;
}

.media-selector .selector-item.selected {
  background-color: #20222C;
  color: #C8C8C8;
}

.media-selector .selector-item:hover {
  background-color: #20222C;
  color: #C8C8C8;
  cursor: pointer;
}

.media-selector .selector-service {
  padding-left: 15px;
  cursor: pointer;
}

.media-library {
  height: 100%;
  margin-right: 0;
}

.history-table {
  height: 100%;
  padding-left: 0;
  padding-right: 0;
}

.settings-page {
  height: 100%;
  border: 5px solid #262A2A;
  background-color: #090A0A;
  color: #819FAB;
}

/*
 Media browser
*/

.media-browser {
  height:100%;
  margin-right: 0;
}

.media-browser-section {
  height: 50%;
}

.browser-table {
  height: 100%;
  overflow-y: auto;
  border: 5px solid #262A2A;
  padding: 0;
  font-size: 12px;
}

.browser-table table {
    border-collapse: collapse;
    margin-bottom: 0;
}

.browser-table table thead tr th {
    font-weight: normal;
    line-height: 4px;
    border-top: 1px solid #515455 !important;
    border-left: 1px solid #515455;
    border-bottom: 1px solid #2C2E2F;
    border-right: 1px solid #181A1A;
}

.browser-table table tbody tr td {
    border-top: 0;
    line-height: 4px;
    overflow: hidden;
    white-space:nowrap
}

.browser-table thead {
    background-color: #393B3C;
    color: #C8C8C8;
}

.browser-table {
    background-color: #090A0A;
    color: #819FAB;
}

.all-height {
  position: relative;
  height: 100%;
}

.browser-table-item:nth-child(even) {
    background-color: #0E0E0F;
}

.browser-table-item:hover {
  background-color: #20222C;
  color: #C8C8C8;
  cursor: pointer;
}

.browser-table-item.playing {
    background-color: #20222C;
    color: #C8C8C8;
}

.browser-table-item.cached {
    padding-right: 2px;
}

.media-loading {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.media-loading .layer{
  height: 100%;
  width: 100%;
  opacity: 0.6;
  background-color: black;
  position: relative;
  z-index: 10;
}

.media-loading span {
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  opacity: 1;
  color: #819FAB;
}

/*
 Player styles
*/

.media-player {
    height: 100%;
    margin-left: 0;
    padding-left: 10px;
}

.media-player .now-playing {
    margin-left: 0;
    margin-top: 5px;
    margin-right: 0;
    position: relative;
    background-color: #090A0A;
    padding: 10px;
    color: #9CBACA;
}

.now-playing > div {
    padding: 0;
}

.media-player .time {

    height: 100%;
    font-size: 20px;
    padding-left: 10px;
}

.media-player .whats-playing {
    background-color: #090A0A;
    font-size: 11px;
}

.media-player .specs {
    background-color: #090A0A;
    font-size: 8px;
    margin-right: 5px;
}
.media-player .specs>div {
    padding: 0;
}

.media-player .eq-volume {
    margin-left: 0px;
}

.media-player .eq {
    height: 30px;
    background-color: #090A0A;
}

.media-player .controls {
    padding: 5px;
    padding-left: 0;
}

.media-player .specs .dark {
    color: #5B6B72;
}

.spec-status {
    text-align: right;
    padding-right: 20px !important;
}

.eq-canvas {
    background-color: black;
    height: 30px;
    width: 100%;
    margin-top: -5px;
}

.eq-volume .volume {
  padding-top: 5px;
  padding-right: 0;
}

/*
 Volume and progress slider
 */

.media-slider {
  height: 3px;
  margin-top: 9px;
  background: black;
  border: 0;
}

.media-slider .ui-slider-handle {
  height: 10px;
  width: 20px;
  top: -4px;
  border-radius: 2px;
}

.media-slider .ui-slider-range {
  background: #8D989D;
  height: 3px;
}

.media-slider .slider-buffered {
  height: 3px;
  width: 0;
  background-color: #36393B;
}

/*
  Now Playing styles
*/

.now-playing-details {
    background-color: #0A0A0A;
    margin-top: 5px;
    height: 100%;
}

.now-playing-details .row {
    height: 100%;
}

.album-art-column {
    height: 100%;
    padding-top: 15px;
    padding-bottom: 15px;
}

.album-art-img {
    height: 100%;
    width: 100%;
}

.details-spec {
    padding-top: 15px;
    padding-bottom: 15px;
    color: #9CBACA;
    font-size: 12px
}

.details-spec .detail-light {
    color: #5B6B72;
}

/*
  Playlist details styles
*/
.playlist-details {
    margin-top: 5px;
    height: 100%;
}

.playlist-details .row {
    background-color: #0A0A0A;
    height: 100%;
    margin-left: 0px;
    margin-right: -10px;
}

/*
  Google Login
*/

.login {
  color: white;
  width: 500px;
}

#canvas {
    background-color: white;
    position: absolute;
    top:0;
    right: 0;
    height: 325px;
    width: 1000px;
}

.button-shadow {
  background: @button-gradient;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-left-color: rgb(214,214,214);
  border-right-color: rgb(100,100,100);
  border-top-color: rgb(231,231,231);
  border-bottom-color: rgb(100,100,100);
  opacity: 1;
}


@rail-background-color: rgb(20,21,22);

.dragger_bar {
  width: 100%;
  height: 100%;
  .button-shadow();
  background-image: url("../assets/images/cloudamp-scroll-hamburger.png"), @button-gradient;
  background-repeat: no-repeat;
  background-position: center;
}

.mCS-cloudamp {
  .mCSB_scrollTools {
    background-color: @rail-background-color;
    opacity: 1;
    border-right: 1px solid @dark-border;
    border-bottom: 1px solid @dark-border;
    .mCSB_draggerRail {
      background-color: @rail-background-color;
    }
    .mCSB_draggerContainer {
      margin: 16px 0;
    }
  }

  //Make all actions on the dragger_bar the same, we don't want it
  //changing when you hover or activate it
  .mCSB_scrollTools {
    .mCSB_draggerContainer {
      .mCSB_dragger {
        .mCSB_dragger_bar {
          .dragger_bar();
        }
      }
      .mCSB_dragger:hover {
        .mCSB_dragger_bar {
          .dragger_bar();
        }
      }
      .mCSB_dragger:active {
        .mCSB_dragger_bar {
          .dragger_bar();
        }
      }
    }
  }

  .mCSB_scrollTools.mCSB_scrollTools_horizontal {
    .mCSB_draggerContainer {
      margin: 0 15px;
      .mCSB_dragger {
        max-width: 100%;
        .mCSB_dragger_bar {
          margin: 0;
          background-image: url("../assets/images/cloudamp-scroll-horizontal-hamburger.png"), @button-gradient;
        }
      }
    }
  }

  .mCSB_container {
    padding-right: 0;
    margin-right: 16px;
    padding-bottom: 16px;
  }
  .mCSB_container_wrapper {
    margin-right: 0;
    margin-bottom: 0;
  }

  .mCSB_scrollTools_vertical {
    .mCSB_buttonUp {
      .button-shadow();
      height: 15px;
      width: 15px;
      background-image: url("../assets/images/cloudamp-up-arrow.png"), @button-gradient;
      background-repeat: no-repeat;
      background-position: center;
    }
    .mCSB_buttonDown {
      .button-shadow();
      height: 15px;
      background-image: url("../assets/images/cloudamp-down-arrow.png"), @button-gradient;
      background-repeat: no-repeat;
      background-position: center;
    }
  }

  .mCSB_scrollTools_horizontal {
    .mCSB_buttonRight {
      .button-shadow();
      height: 15px;
      width: 15px;
      background-image: url("../assets/images/cloudamp-right-arrow.png"), @button-gradient;
      background-repeat: no-repeat;
      background-position: center;
    }
    .mCSB_buttonLeft {
      .button-shadow();
      height: 15px;
      width: 15px;
      background-image: url("../assets/images/cloudamp-left-arrow.png"), @button-gradient;
      background-repeat: no-repeat;
      background-position: center;
    }
  }

}

